--- a/views/partials/facebook.handlebars
+++ b/views/partials/facebook.handlebars
@@ -1,10 +1,11 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '822548757856657',
+      appId      : '259836277788071',
       xfbml      : true,
-      version    : 'v2.5'
+      version    : 'v2.8'
     });
+    FB.AppEvents.logPageView();
   };
 
   (function(d, s, id){
@@ -15,4 +16,5 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+
 
